--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body class="home-page">
+    <!--NAVIGACIJA-->
     <nav class="navbar navbar-expand-sm bg-white navbar-light">
       <button
         class="navbar-toggler"
@@ -52,6 +53,7 @@
         </ul>
       </div>
     </nav>
+    <!--1 DALIS-->
     <header>
       <div class="container">
         <div class="row align-items-center">
@@ -66,7 +68,79 @@
         </div>
       </div>
     </header>
-
+    <!--2 DALIS-->
+    <div class="general-information page-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 cold-md-12 col-12 text-information-col">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-12 information-block">
+                <img src="./img/simple-line-icons_bubbles.png" alt="sms" />
+                <h3>Socialinių tinklų reklama</h3>
+                <p>Mes siūlome reklamą įvairiuose socialiniuose tinkluose.</p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-12 information-block">
+                <img
+                  src="./img/simple-line-icons_direction.png"
+                  alt="plaktukas"
+                />
+                <h3>Reklama lauke</h3>
+                <p>
+                  Mes siūlome reklamą įvairiuose stenduose ar plakatuose lauke.
+                </p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-12 information-block">
+                <img
+                  src="./img/simple-line-icons_earphones.png"
+                  alt="ausines"
+                />
+                <h3>Reklama per radiją</h3>
+                <p>Mūsų sukurtas reklamas galėsite išgirsti per radiją.</p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-12 information-block">
+                <img src="./img/simple-line-icons_call-end.png" alt="ragelis" />
+                <h3>Reklama telefonu</h3>
+                <p>
+                  Reklamuosime jūsų paslaugas skambindami jūsų tikslinei
+                  auditorijai.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 cold-md-12 col-12 foto-col">
+            <img src="./img/Rectangle 4.png" class="img-fluid" alt="zmones" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--3 dalis-->
+    <div class="video-section page-section">
+      <div class="container">
+        <div class="row page-section-header-row">
+          <div class="col">
+            <h2>Vaizdai iš mūsų įmonės</h2>
+            <p class="sub-heading">
+              Nulla volutpat in ut risus imperdiet aenean justo, tristique neque
+              scelerisque feugiat adipiscing non nulla feugiat lacus sem sed
+              maecenas
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-12 col-lg-8 video-col">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/l9VY_59hq4s?si=MgHGGAoF1-Fg3SDy"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
 
     <script
